# ChangeLog for x11-apps/mkfontscale
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.123 2015/03/14 13:56:34 maekke Exp $

  14 Mar 2015; Markus Meier <maekke@gentoo.org> mkfontscale-1.1.2.ebuild:
  arm stable, bug #530652

  06 Mar 2015; Jeroen Roovers <jer@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for HPPA (bug #530652).

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for alpha, wrt bug #530652

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for sparc, wrt bug #530652

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.2.ebuild:
  Stable for amd64, wrt bug #530652

*mkfontscale-1.1.2 (05 Feb 2015)

  05 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +mkfontscale-1.1.2.ebuild, -files/mkfontscale-1.0.9-heavy-support.txt,
  -mkfontscale-1.0.8.ebuild, -mkfontscale-1.0.9-r1.ebuild,
  -mkfontscale-1.0.9.ebuild, -mkfontscale-1.1.0.ebuild:
  Version bump. Remove old.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> mkfontscale-1.1.1.ebuild:
  Add arm64 love.

  08 Oct 2013; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.1.ebuild:
  Stable for x86, wrt bug #475480

  07 Oct 2013; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.1.ebuild:
  Stable for sparc, wrt bug #475480

  06 Oct 2013; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.1.1.ebuild:
  Stable for ia64, wrt bug #475480
