@@ -4,13 +4,23 @@ Hash: SHA256
 DIST mkfontscale-1.1.1.tar.bz2 139923 SHA256 244017992477ced2397a44fd0ddcfb0f1d9899128613f5c4db81471163b0b731 SHA512 7a6da239b2f166c6283090c219889e998be9332ee1e8eb4d84bbdf0cb58125a3773fe7ee97774d86f2cd5385dc49636a797c7b9c25c6c8bbe24b898329f97220 WHIRLPOOL 36584d969899c135b5efe3c8323a721bde5ff7b7909741d94f1548b8d9f6b8e57527a522edcf34ba2c5f076f01fed454e7d12bee39d345e0513b76fcec29c4d8
 DIST mkfontscale-1.1.2.tar.bz2 141728 SHA256 8c6d5228af885477b9aec60ca6f172578e7d2de42234357af62fb00439453f20 SHA512 5c3331f66cd523afe95347aa36440655ba8fdbc716c5987a24ad624c1fbd718c4a8d67aa36330f6d5ab2eb5a6195a409a041954568c0a3375c0e2aeb6a955601 WHIRLPOOL 0a915e4915250bac3d057e8d997188c2955c6e4d6d0ef0299b53d39afdd2ae55e5958fd32de721178520b5533e4452f43c29ed4aba869eaba8408ca730578045
 EBUILD mkfontscale-1.1.1.ebuild 720 SHA256 4f3ab9942e9910c571ee0c5904f19f2c062fa45148190da4c917756fdd621d95 SHA512 5a808ab1ed0eb12435cb22f6090afe6a4179003aaab1da5d24231b3c112b1b39f0328210d4dc4a1fb05fc9e2b55669852663089e5187ce11b49c2cb89ea5aa1e WHIRLPOOL 689e7bd5f86058084bca19ff464a804d568f44c1bb6015df68bfdf95c6e8871509e522c384ec9461bdf8fd53e836de89b79a836c9d8569e6edbab2c554450ea6
-EBUILD mkfontscale-1.1.2.ebuild 723 SHA256 df5d3d44c1cfd1bfe08a036f8518ff865e433c1a4eacbe59723606929ef4ad29 SHA512 933a48ec9f34969fa1e9d752a224157e30db956cb11e541757ad06ee8b2f7b23ff62ef31e750eea9b4a670e0c640f8c42899889d00107fb73e9b5fdeee954a5f WHIRLPOOL 4a8079cbc375aa57309bac985522960a2cf6fb7ea0515ca6d2f2a2a7f2dedc00a8cc64573f28ca0bbd90a43e95ae9c6c0bc4661f4d91eb8f20b2d1a8ae7ceafb
-MISC ChangeLog 14841 SHA256 48d68b428a58b224c57b5cee5cb79f1b5f72e173fce2b7f1774f4ef2537b8faf SHA512 e169123c81e9d0e5048684ec864ca27314c237f9b7d455d21c1fd3ff78ede6926d163d6e5db8e1520befc2f3c82ff7bbb904e54bc32b37cb81de07a6c7477b55 WHIRLPOOL 56539992eede8c5f4c2aaf93b1b32b386b105eeadb00b2b417c917bef149fc1712bb5632e79e285f4a756b221d517644aa59588253b62673604793343d8ce9da
+EBUILD mkfontscale-1.1.2.ebuild 740 SHA256 d10d401f4c54cbe59803e3237275cf5802d1edfc8c99b475b854f485a46bf6fd SHA512 f8976bbce501b390de908ace8428666f3df6416b8c8598fe85cf5c1c9894138693c318ac3b9ee84ebb0cbb385d02b1341dfd11be7953ed6fb0f4ea35e273c8a9 WHIRLPOOL ee301203df940c1736eb6df4bd6c4a8ea4a109d8e5c29278006a77686927e924dba830487e904f21cb484d7f93eecff17add96894f639c45743d35e0979ddfa5
+MISC ChangeLog 14966 SHA256 b8086e4bed1d1fab5c78b5fa05a043148370366cb34cfaaaf001d448ebf21161 SHA512 d991c1126e298f5d5fdf30e5af8423dc66f5d9cac45b6111b18bd97f2f70ae1b494cd9120f30e92d44360c92061e92f3f4f1d8df7b4ff7e1b351b7a61e13ba8d WHIRLPOOL 50187ec00717766aee9e82e32df7bb054cbb5bc5d35e686b2b0bebb2311c016d10d75fd080421a2386faced9085aa53c4eb26f5efdba9ddd34653f4d9fd3808a
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUEPwkACgkQkKaRLQcq0GKplgCgkU9O2sU0SqV/XkJxe04IsxP4
-LdQAoKxcYFMXzLn8dnZt3CJgivZ5nbEt
-=EO8H
+iQIcBAEBCAAGBQJVYT90AAoJEA/daC2XTKcqDCgP/Ap8U1fslyzZ78Di2+CzGpb3
+MlUFYIXCnkWe1PEA8e9d/ZqET6qUeEGrx28E920ZR8dtMKwHofRT9/V9uVjobQIX
+kVUwpDTrhpQg7POaomvg7J8cIFXX7rCyMMAPolcIwm061oFovOg7gAbyz8mmgNXp
+PT8s9kQ47WMi9kdBJ9B7hQ0ySwaNJzq+1k0ZWTctEe2cj1U2d+uxaCqz8d2EHrZ4
+Tsrg8wrtL4L2k/7tsdddgEJy237Z0QdQ0jY5QkRYABYaoC5vCzEZIQ+TfgPcexmR
+e3iaorK23ldihImMJA2tawcYdM+IqG2gVh4rJwXBf89VE3xLtcpo7aCiotqgpJHH
+FKrrDR2DuYB6x2GLkSzDitHVDYhP5ihrfhVZ51tOxnqQyIDUkb7P/u8zbdmqmyZp
++/fyHv4kFQKDiNMnMgX894T1faKdzxxsfHyBwseMqtcWllQO4t7kfZw0hNIwy3Nw
+7tD7+E97xTTVrceachadu1U4FSoQez8B5PwfHpiAHkyF0QYtr/x5nI3WUI+xnjyK
+6c0altplLbzbVJvjbXqBmOPRWO6a8vE1M7euMNvcag0sZmDP8Fxjlr/xxo1c9xRx
+u6cbJ3vXN1KKpxHvDKz6tXAgw7A75L9iAACyWm3gAbUhD8Q4DSmaZCRiV8XmtSvG
+nakzMTmR+4sDHVijh361
+=B57K
 -----END PGP SIGNATURE-----
