@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontscale/mkfontscale-1.1.2.ebuild,v 1.10 2015/03/14 13:56:34 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontscale/mkfontscale-1.1.2.ebuild,v 1.11 2015/05/24 03:02:53 mattst88 Exp $
 
 EAPI=5
 
@@ -12,11 +12,12 @@ KEYWORDS="alpha amd64 arm ~arm64 hppa ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~
 IUSE=""
 
 RDEPEND="x11-libs/libfontenc
-	media-libs/freetype:2"
+	media-libs/freetype:2
+	sys-libs/zlib
+	app-arch/bzip2"
 DEPEND="${RDEPEND}
 	x11-proto/xproto
-	app-arch/gzip
-	app-arch/bzip2"
+	app-arch/gzip"
 
 XORG_CONFIGURE_OPTIONS=(
 	--with-bzip2
